<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Second" >

    <AutoCompleteTextView
        android:id="@+id/User_Name_Txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="user name">

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Status_Txt" />

    <Button
        android:id="@+id/Internal_Cache_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Internal_Cache_Btn"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/External_Cache_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/External_Cache_Btn" 
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/External_Private_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/External_Private_Btn" 
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/External_Public_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/External_Public_Btn"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/Next_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next_Btn" 
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
